--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,110 @@
+body {
+    font-family: "Helvetica", "Arial", sans-serif;
+}
+
+/* Table */
 table {
     border: 2px solid black;
     border-collapse: collapse;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 td, th {
     border: 1px solid black;
+}
+
+/* Modal */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.7);
+}
+
+.modal-content {
+    background-color: white;
+    margin: 15% auto;
+    border: 1px solid grey;
+    width: 80%;
+}
+
+.modal-body {
+    padding: 50px 20px;
+}
+
+.modal-btn {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 200px;
+}
+
+.close {
+    position: relative;
+    cursor: pointer;
+    float: right;
+    font-size: 48px;
+    margin-right: 10px;
+}
+
+/* Form */
+.form-row {
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    margin-left: 5%;
+    margin-bottom: 40px;
+}
+
+.form-row input[type="text"],
+.form-row input[type="number"] {
+    padding: 7px;
+    font-size: 14px;
+}
+
+.form-row label {
+    font-size: 20px;
+    width: 50px;
+    align-self: center;
+    padding-right: 20px;
+    text-align: right;
+}
+
+.form-row button {
+    margin-left: auto;
+    margin-right: auto;
+
+    font-size: 16px;
+    font-weight: bold;
+
+    color: white;
+    background-color: #5995DA;
+    
+    border: none;
+    border-radius: 3px;
+
+    padding: 10px 40px;
+}
+
+.form-row button:hover {
+    background-color: #76AEED;;
+}
+
+.form-row button:focus {
+    background-color: #407FC7;
+}
+
+/* Desktop */
+
+@media only screen and (min-width: 700px) {
+    .form-row input[type="text"],
+    .form-row input[type="number"] {
+        width: clamp(200px, 80%, 1000px);
+    }
 }
