--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,7 @@ td, th {
     text-align: right;
 }
 
-.form-row button {
+.submit {
     margin-left: auto;
     margin-right: auto;
 
@@ -92,11 +92,11 @@ td, th {
     padding: 10px 40px;
 }
 
-.form-row button:hover {
+.submit:hover {
     background-color: #76AEED;;
 }
 
-.form-row button:focus {
+.submit:focus {
     background-color: #407FC7;
 }
 
