--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,21 @@ td, th {
     margin-left: auto;
     margin-right: auto;
     margin-top: 200px;
+
+    background-image: linear-gradient(-180deg, #00D775, #00BD68);
+    border-radius: 5px;    
+    border: 0;
+
+    height: 60px;
+    width: 100px;
+
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.modal-btn:hover {
+  background: #00bd68;
 }
 
 .close {
